Updated link to project

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </style>
 </head>
 <body>
-<a href="https://github.com/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="forkme.png" alt="Fork me on GitHub"></a>
+<a href="https://github.com/dciarletta/d3-floorplan/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="forkme.png" alt="Fork me on GitHub"></a>
 <h1>Floor Plan <small>(0.1.0)</small></h1>
 <p>A layered map <a href="http://bost.ocks.org/mike/chart/">reusable chart</a> suitable for small area, local coordinate systems like building floor plans.
 There is no tiling or projection capabilities, just simple X-Y scaled coordinates, pan-zoom functionality, and a set of layers for data visualization over the region.</p>
