Added links to wiki pages

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 There is no tiling or projection capabilities, just simple X-Y scaled coordinates, pan-zoom functionality, and a set of layers for data visualization over the region.</p>
 <p><strong><a href="#">d3.floorplan.min.js</a></strong><small> - requires <strong><a href="http://d3js.org/">D3.js</a></strong></small></p>
 
+<ul>
+	<li><strong><a href="http://github.com/dciarletta/d3-floorplan/wiki/API-Reference">API Reference</a></strong></li>
+	<li><strong><a href="http://github.com/dciarletta/d3-floorplan/wiki/Data-Formats">Data Formats</a></strong></li>
+</ul>
+
 <h3>Example</h3>
 <p>This basic example demonstrates how to create and assign data for each layer. 
 Interact with the map by zooming and then panning or access the different layers by 
